--- a/ChatingApp/appsettings.json
+++ b/ChatingApp/appsettings.json
@@ -8,6 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-98GAF0P\\SQLEXPRESS;Database=ChatingDB;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+  },
+  "TokenKey": "your-very-long-secret-key-goes-hereyour-very-long-secret-key-goes-hereyour-very-long-secret-key-goes-here"
+
 
 }
