--- a/ChatingApp/appsettings.json
+++ b/ChatingApp/appsettings.json
@@ -9,7 +9,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-98GAF0P\\SQLEXPRESS;Database=ChatingDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "TokenKey": "your-very-long-secret-key-goes-hereyour-very-long-secret-key-goes-hereyour-very-long-secret-key-goes-here"
+  "TokenKey": "your-very-long-secret-key-goes-hereyour-very-long-secret-key-goes-hereyour-very-long-secret-key-goes-here",
 
+  "CloudinarySettings": {
+    "CloudName": "dhykaukic",
+    "ApiKey": "363484755472914",
+    "ApiSecret": "H4TZ3vfuW9r8ozEHJ9iDHzg6tsI"
+  }
 
 }
